# california-housing-api

./: Dockerfile  README.md  pyproject.toml  train.py
manifests/: api-deployment.yaml  api-service.yaml  namespace.yaml  redis-deployment.yaml  redis-service.yaml
src/: main.py  pydantic.py
tests/: test_main.py
